--- a/responsive.css
+++ b/responsive.css
@@ -1,45 +1,71 @@
 @media only screen and (max-width: 500px) {
-    
-.inner-play>div{
+  .inner-play > div {
     transform: scale(0.6);
-}
-.playcontainer{
+  }
+  .playcontainer {
     background-size: 250px;
-}
-.play{
+  }
+  .play {
     padding-top: 30px;
-}
-.upper-play{
+  }
+  .upper-play {
     width: 100%;
-}
-.upper-play>div{
+  }
+  .upper-play > div {
     padding: 20px;
-}
-.bottom-play{
+  }
+  .bottom-play {
     padding-top: 0px;
-}
-.score-sec{
+  }
+  .score-sec {
     height: 110px;
-}
-.score-text{
+  }
+  .score-text {
     font-size: 15px;
-}
-.score-number{
+  }
+  .score-number {
     font-size: 30px;
-}
+  }
 
-.popup{
+  .popup {
     width: 100%;
     height: 100vh;
     top: 0px;
     background-position: center;
-}
-.popup.active{
+  }
+  .popup.active {
     top: 0px;
-}
+  }
+  .result {
+    height: screen;
+  }
 
-.rules{
-   /* right: 35%; */
-}
+  .left-col {
+    transform: translate(45px) scale(0.5);
+  }
+  .left-col > h2 {
+    padding-bottom: 40px;
+  }
+  .right-col {
+    transform: translate(-45px) scale(0.5);
+  }
+  .right-col > h2 {
+    padding-bottom: 40px;
+  }
+  .load-div {
+    transform: translate(10px);
+  }
+  .game {
+    /* justify-content: center; */
+    height: 60%;
+  }
+  .middle {
+    position: absolute;
+    top: 450px;
+  }
 
+  .rules {
+    right: 50%;
+    left: 40%;
+  }
 }
